...

    func startTimer() {
        //fatalError()
        
        navigationItem.rightBarButtonItem?.isEnabled = false
        navigationItem.setHidesBackButton(true, animated: true)
        startStopButton.setTitle(NSLocalizedString("Stop", comment: "Stop button title"), for: UIControlState())
        startStopButton.setTitleColor(.red, for: UIControlState())
        timer = Timer.scheduledTimer(timeInterval: 1,
            target: self,
            selector: #selector(TimerDetailViewController.timerFired),
            userInfo: nil,
            repeats: true)
...
    }

    func stopTimer(_ reason: StopTimerReason) {
        navigationItem.rightBarButtonItem?.isEnabled = true
        navigationItem.setHidesBackButton(false, animated: true)
        countdownLabel.text = timerModel.durationText
        startStopButton.setTitle(NSLocalizedString("Start", comment: "Start button title"), for: UIControlState())
        startStopButton.setTitleColor(.green, for: UIControlState())
        timer?.invalidate()

        if reason == .cancelled {
            UIApplication.shared.cancelAllLocalNotifications()
        }
...
